# vigil

./: .env-template  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  telegram-setup.md
app/: bot.py  database.py  main.py  processor.py
app/templates/: index.html
